# gwca-skeleton

./: .gitmodules  CMakeLists.txt  readme.md
MyApp/src/: MyApp.cpp
MyDLL/src/: MyDLL.cpp  MyDLL.h
PacketLogger/src/: PacketLogger.cpp
scripts/: build.sh  configure.sh  debug.sh  setup.sh
